--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
 		<li><a href="GehenSansBook-demo.html">Gehen Sans</a></li>
 		<li><a href="GehenSansCondensedBold-demo.html">Gehen Sans Bold Condensed</a></li>
 	</ul>
+
+	<h2>Pirate Party Logo Demo</h2>
+	<div id="ppau-logo" style="font-size: 64pt">
+		<span style="font-family: 'GehenSansCondensed'; font-weight: bold; color: rgb(0, 96, 160)">pirate</span>party
+	</div>
 	
   </div>
 
