--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 	<h2>Pirate Party Logo Demo</h2>
 	<div id="ppau-logo" style="font-size: 64pt">
-		<span style="font-family: 'GehenSansCondensed'; font-weight: bold; color: rgb(0, 96, 160)">pirate</span>party
+		<span style="font-family: 'GehenSansCondensedBold'; font-weight: bold; color: rgb(0, 96, 160)">pirate</span>party
 	</div>
 	
   </div>
