--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 	<ul>
 		<li><a href="GehenSansBook-demo.html">Gehen Sans</a></li>
 		<li><a href="GehenSansCondensedBold-demo.html">Gehen Sans Bold Condensed</a></li>
+		<li><a href="GehenSansMonoBook-demo.html">Gehen Sans Mono</a></li>
 	</ul>
 
 	<h2>Pirate Party Logo Demo</h2>
