--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
       margin: 0 auto;
       width: 700px;
     }
+	.pirate-bold {
+		font-family: 'GehenSansCondensedBold'; 
+		font-weight: bold; 
+		color: rgb(0, 96, 160);
+	}
   </style>
 </head>
 
@@ -32,7 +37,7 @@
 
 	<h2>Pirate Party Logo Demo</h2>
 	<div id="ppau-logo" style="font-size: 64pt">
-		<span style="font-family: 'GehenSansCondensedBold'; font-weight: bold; color: rgb(0, 96, 160)">pirate</span>party
+		<span class="pirate-bold">pirate</span>party
 	</div>
 	
   </div>
