--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	<ul>
 		<li><a href="GehenSansBook-demo.html">Gehen Sans</a></li>
 		<li><a href="GehenSansCondensedBold-demo.html">Gehen Sans Bold Condensed</a></li>
-		<li><a href="GehenSansMonoBook-demo.html">Gehen Sans Mono</a></li>
+		<li><a href="GehenSansMonoProgrammer-demo.html">Gehen Sans Mono Programmer</a></li>
 	</ul>
 
 	<h2>Pirate Party Logo Demo</h2>
