--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
 		<li><a href="GehenSansMonoProgrammer-demo.html">Gehen Sans Mono Programmer</a></li>
 	</ul>
 
+	<h2>Example</h2>
+	<span class='pirate-bold'>example</span>text
+
   </div>
 
 </body>
