--- a/index.html
+++ b/index.html
@@ -36,7 +36,19 @@
 	</ul>
 
 	<h2>Example</h2>
-	<span class='pirate-bold'>example</span>text
+	<div style="font-size: 6pt"><span class='pirate-bold'>example</span>text</div>
+	<div style="font-size: 8pt"><span class='pirate-bold'>example</span>text</div>
+	<div style="font-size: 10pt"><span class='pirate-bold'>example</span>text</div>
+	<div style="font-size: 12pt"><span class='pirate-bold'>example</span>text</div>
+	<div style="font-size: 14pt"><span class='pirate-bold'>example</span>text</div>
+	<div style="font-size: 16pt"><span class='pirate-bold'>example</span>text</div>
+	<div style="font-size: 18pt"><span class='pirate-bold'>example</span>text</div>
+	<div style="font-size: 24pt"><span class='pirate-bold'>example</span>text</div>
+	<div style="font-size: 36pt"><span class='pirate-bold'>example</span>text</div>
+	<div style="font-size: 48pt"><span class='pirate-bold'>example</span>text</div>
+	<div style="font-size: 64pt"><span class='pirate-bold'>example</span>text</div>
+	<div style="font-size: 72pt"><span class='pirate-bold'>example</span>text</div>
+	<div style="font-size: 108pt"><span class='pirate-bold'>example</span>text</div>
 
   </div>
 
