--- a/GehenSansBook-demo.html
+++ b/GehenSansBook-demo.html
@@ -7,10 +7,10 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="specimen_files/easytabs.js" type="text/javascript" charset="utf-8"></script>
 	<link rel="stylesheet" href="specimen_files/specimen_stylesheet.css" type="text/css" charset="utf-8" />
-	<link rel="stylesheet" href="stylesheet.css" type="text/css" charset="utf-8" />
+	<link rel="stylesheet" href="webfonts.css" type="text/css" charset="utf-8" />
 
 	<style type="text/css">
-			body{
+		body {
 			font-family: 'GehenSans';
 			font-weight: normal;
 			font-style: normal;
@@ -18,6 +18,7 @@
 		#layout h1, #layout h2, #layout h3 {
 			font-weight: normal;
 			font-style: normal;
+		}
 		</style>
 
 <title>Gehen Sans Book Specimen</title>
