--- a/GehenSansCondensedBold-demo.html
+++ b/GehenSansCondensedBold-demo.html
@@ -7,17 +7,19 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="specimen_files/easytabs.js" type="text/javascript" charset="utf-8"></script>
 	<link rel="stylesheet" href="specimen_files/specimen_stylesheet.css" type="text/css" charset="utf-8" />
-	<link rel="stylesheet" href="stylesheet.css" type="text/css" charset="utf-8" />
+	<link rel="stylesheet" href="webfonts.css" type="text/css" charset="utf-8" />
 
 	<style type="text/css">
-			body{
-			font-family: 'GehenSansCondensedBold';
+		body {
+			font-family: 'GehenSansCondensed';
 			font-weight: bold;
 			font-style: normal;
 		}
+		
 		#layout h1, #layout h2, #layout h3 {
 			font-weight: bold;
 			font-style: normal;
+		}
 		</style>
 
 <title>Gehen Sans Condensed Bold Specimen</title>
