--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset='utf-8'>
 
   <title>bbqsrc/gehen-fonts @ GitHub</title>
-	<link rel="stylesheet" href="stylesheet.css" type="text/css" charset="utf-8" />
+	<link rel="stylesheet" href="webfonts.css" type="text/css" charset="utf-8" />
 
   <style type="text/css">
 	body{
@@ -15,7 +15,7 @@
       width: 700px;
     }
 	.pirate-bold {
-		font-family: 'GehenSansCondensedBold'; 
+		font-family: 'GehenSansCondensed'; 
 		font-weight: bold; 
 		color: rgb(0, 96, 160);
 	}
