--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="webfonts.css" type="text/css" charset="utf-8" />
 
   <style type="text/css">
-	body{
+	body, h1, h2, h3 {
 		font-family: 'GehenSans';
     }
     #container {
