--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     }
     #container {
       margin: 0 auto;
-      width: 700px;
+      min-width: 800px;
+	  max-width: 1024px;
     }
 	.pirate-bold {
 		font-family: 'GehenSansCondensed'; 
