--- a/pirateparty.html
+++ b/pirateparty.html
@@ -12,7 +12,8 @@
     }
     #container {
       margin: 0 auto;
-      width: 700px;
+      min-width: 800px;
+	  max-width: 1024px;
     }
 	.pirate-bold {
 		font-family: 'GehenSansCondensed'; 
@@ -33,6 +34,10 @@
 
 	<h2>Czech</h2>
 	<div style="font-size: 72pt"><span class='pirate-bold'>pirátská</span>strana</div>
+
+	<h2>Spanish</h2>
+	<div style="font-size: 64pt">partido<span class='pirate-bold'>pirata</span> (España)</div>
+
   </div>
 
 </body>
