add download link

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
 	<div style="font-size: 64pt"><span class='pirate-bold'>example</span>text</div>
 	<div style="font-size: 72pt"><span class='pirate-bold'>example</span>text</div>
 	<div style="font-size: 108pt"><span class='pirate-bold'>example</span>text</div>
+	
+	<h2>Download</h2>
+	<a href="https://github.com/bbqsrc/gehen-fonts/downloads">Fonts @ GitHub [Experimental!]</a>
 
   </div>
 
