--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 	  max-width: 1024px;
     }
 	.pirate-bold {
-		font-family: 'GehenSansCondensed'; 
+		font-family: 'GehenSans'; 
 		font-weight: bold; 
-		color: rgb(0, 96, 160);
+		color: #0073ae;
 	}
   </style>
 </head>
@@ -31,9 +31,8 @@
 	
 	<h2>Demos</h2>
 	<ul>
-		<li><a href="GehenSansBook-demo.html">Gehen Sans</a></li>
-		<li><a href="GehenSansCondensedBold-demo.html">Gehen Sans Bold Condensed</a></li>
-		<li><a href="GehenSansMonoProgrammer-demo.html">Gehen Sans Mono Programmer</a></li>
+		<li><a href="gehensans-regular-demo.html">Gehen Sans Regular</a></li>
+		<li><a href="gehensans-bold-demo.html">Gehen Sans Bold</a></li>
 	</ul>
 
 	<h2>Example</h2>
