--- a/pirateparty.html
+++ b/pirateparty.html
@@ -16,9 +16,9 @@
 	  max-width: 1024px;
     }
 	.pirate-bold {
-		font-family: 'GehenSansCondensed'; 
+		font-family: 'GehenSans'; 
 		font-weight: bold; 
-		color: rgb(0, 96, 160);
+		color: #0073ae;
 	}
   </style>
 </head>
@@ -30,7 +30,8 @@
 	<h1>Pirate Party Localisation Examples</h1>
 
 	<h2>English</h2>
-	<div style="font-size: 72pt"><span class='pirate-bold'>pirate</span>party</div>
+  <div style="font-size: 72pt"><span class='pirate-bold'>pirate</span>party</div>
+  <div style="font-size: 48pt">australia</div>
 
 	<h2>Czech</h2>
 	<div style="font-size: 72pt"><span class='pirate-bold'>pirátská</span>strana</div>
