--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
 		<li><a href="gehensans-regular-demo.html">Gehen Sans Regular</a></li>
 		<li><a href="gehensans-bold-demo.html">Gehen Sans Bold</a></li>
 	</ul>
+  
+  <h2>Download</h2>
+  <ul>
+    <li><a href="gehen-sans-otf-0.4.tar.gz">OpenType Fonts</a></li>
+    <li><a href="gehen-sans-webfonts-0.4.tar.gz">Web Fonts</a></li>
+  </ul>
 
 	<h2>Example</h2>
 	<div style="font-size: 6pt"><span class='pirate-bold'>example</span>text</div>
@@ -50,9 +56,6 @@
 	<div style="font-size: 72pt"><span class='pirate-bold'>example</span>text</div>
 	<div style="font-size: 108pt"><span class='pirate-bold'>example</span>text</div>
 	
-	<h2>Download</h2>
-	<a href="https://github.com/bbqsrc/gehen-fonts/downloads">Fonts @ GitHub [Experimental!]</a>
-
   </div>
 
 </body>
